--- a/potencia/pom.xml
+++ b/potencia/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.ufg.inf.es.construçao.potencia</groupId>
+    <groupId>br.ufg.inf.es.construcao.potencia</groupId>
     <artifactId>potencia</artifactId>
     <version>1.0-SNAPSHOT</version>
 
